header bg stretch fix

--- a/src/app/general-header/general-header.component.css
+++ b/src/app/general-header/general-header.component.css
@@ -12,6 +12,8 @@
     position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
     background-image: url("../../assets/svg/lines.svg");
+    background-size: cover;
+    min-width: 1600px;
 }
 
 .title {
